--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web 2 Framework</title>
+    <title>Earth Google Doodle</title>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
@@ -25,9 +25,9 @@
 </head>
 <body>
     
-    <h1>Web 2 Framework</h1>
+    <h1>Google Doodle</h1>
 
-
+    <img src="./img/2000px-Planets2013.svg.png" alt="Solar System">
 
     <!-- JS Libraries -->
 
