Added h1 and image to Stage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,20 +19,38 @@
     <!-- Normalize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <!-- Library Styling -->
-    
+
     <!-- My Styles -->
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
-<body>
-    
-    <h1>Google Doodle</h1>
 
-    <img src="./img/2000px-Planets2013.svg.png" alt="Solar System">
+<body>
+
+    <!-- Container -->
+    <main>
+
+        <!-- Doodle Stage -->
+        <div id="stage">
+
+            <!-- Elements -->
+            <h1>Solar System</h1>
+            <img src="https://webstockreview.net/images/clipart-science-solar-system-2.png" id="solar-system" alt="solar-system">
+
+        </div>
+
+        <input type="text" />
+        <div id="search">
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
+        </div>
+
+    </main>
 
     <!-- JS Libraries -->
 
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
