--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <!-- Library Styling -->
 
+    <link rel="stylesheet" href="./css/initialStyle.css">
+
     <!-- My Styles -->
     <link rel="stylesheet" href="css/styles.css">
 
